[tool.poetry]
name = "casual_inference"
version = "0.6.2"
description = "Do causal inference more casually"
authors = ["yaginuuun <yaginuuun@gmail.com>"]
homepage = "https://github.com/shyaginuma"
repository = "https://github.com/shyaginuma/casual_inference"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^1.4.3"
numpy = "^1.23.2"
plotly = "^5.10.0"
typing-extensions = "^4.3.0"
scikit-learn = "^1.1.3"
statsmodels = "^0.13.5"
scipy = ">=1.3,<1.9"
lxml = "^4.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"
ipykernel = "^6.15.2"
seaborn = "^0.12.0"
nbformat = "^5.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py39']
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
